import pytest
import json
import logging
import aiofiles

from custom_components.teamtracker.clear_values import async_clear_values
from custom_components.teamtracker.const import (
    DEFAULT_KICKOFF_IN,
    DEFAULT_LAST_UPDATE,
    DEFAULT_LOGO,
)
from custom_components.teamtracker.event import async_process_event
from tests.const import TEST_DATA

_LOGGER = logging.getLogger(__name__)


@pytest.mark.parametrize("t", TEST_DATA, ids=lambda x: x["sensor_name"])
async def test_event(hass, snapshot, t):
    """ Use file w/ test json and loop through test cases and compare to expected results """
    """  This regression tests attributes for all of supported sports, leagues, and game states """

    async with aiofiles.open("tests/tt/all.json", mode="r") as f:
        contents = await f.read()
    data = json.loads(contents)

    assert data is not None

    values = await async_clear_values()
    values["sport"] = t["sport"]
    values["league"] = t["league"]
    values["league_logo"] = DEFAULT_LOGO
    values["team_abbr"] = t["team_abbr"]
    values["state"] = "NOT_FOUND"
    values["last_update"] = DEFAULT_LAST_UPDATE
    values["private_fast_refresh"] = False

    sensor_name = t["sensor_name"]
    sport_path = values["sport"]
    league_id = values["league"]
    team_id = values["team_abbr"]
    lang = "en"
    league_map= {}

    _LOGGER.debug("%s: calling async_process_event()", sensor_name)

    values = await async_process_event(
        values,
        sensor_name,
        data,
        sport_path,
        league_id,
        DEFAULT_LOGO,
        team_id,
        league_map,
        lang,
    )

    assert values

    # Normalize dynamic fields
    values["api_url"] = None
    values["sport_path"] = None
    values["league_path"] = None
    values["kickoff_in"] = DEFAULT_KICKOFF_IN

    assert values == snapshot