# serializer version: 1
# name: test_event[test_tt_all_test01]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '9/8 - 6:45 PM EDT',
    'date': '2022-09-08T22:45Z',
    'down_distance_text': None,
    'event_name': 'MIA @ PHI',
    'event_url': 'http://www.espn.com/mlb/game/_/gameId/401356264',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'MLB',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Philadelphia, Pennsylvania',
    'odds': 'PHI -140',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'PHI',
    'opponent_colors': list([
      '#be0011',
      '#284898',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '22',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/mlb/500/scoreboard/phi.png',
    'opponent_long_name': 'Philadelphia Phillies',
    'opponent_name': 'Phillies',
    'opponent_rank': None,
    'opponent_record': '75-61',
    'opponent_score': '0',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.com/mlb/team/_/name/phi/philadelphia-phillies',
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': 7,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 1,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'baseball',
    'sport_path': None,
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'MIA',
    'team_colors': list([
      '#0081c7',
      '#0077c8',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '28',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/mlb/500/scoreboard/mia.png',
    'team_long_name': 'Miami Marlins',
    'team_name': 'Marlins',
    'team_rank': None,
    'team_record': '55-80',
    'team_score': '0',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.com/mlb/team/_/name/mia/miami-marlins',
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': 'Citizens Bank Park',
  })
# ---
# name: test_event[test_tt_all_test02]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': 1,
    'clock': 'Top 6th',
    'date': '2022-09-08T20:10Z',
    'down_distance_text': None,
    'event_name': 'SF @ MIL',
    'event_url': 'http://www.espn.com/mlb/game?gameId=401423258',
    'kickoff_in': '{test} days',
    'last_play': 'Yastrzemski struck out looking.',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'MLB',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Milwaukee, Wisconsin',
    'odds': None,
    'on_first': False,
    'on_second': False,
    'on_third': False,
    'opponent_abbr': 'SF',
    'opponent_colors': list([
      '#161415',
      '#000000',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '26',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/mlb/500/scoreboard/sf.png',
    'opponent_long_name': 'San Francisco Giants',
    'opponent_name': 'Giants',
    'opponent_rank': None,
    'opponent_record': '65-70',
    'opponent_score': '1',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.com/mlb/team/_/name/sf/san-francisco-giants',
    'opponent_win_probability': 0.238,
    'opponent_winner': None,
    'outs': 2,
    'overunder': None,
    'possession': '26',
    'private_fast_refresh': True,
    'quarter': 6,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'baseball',
    'sport_path': None,
    'state': 'IN',
    'strikes': 3,
    'team_abbr': 'MIL',
    'team_colors': list([
      '#050C33',
      '#f1f2f3',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '8',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/mlb/500/scoreboard/mil.png',
    'team_long_name': 'Milwaukee Brewers',
    'team_name': 'Brewers',
    'team_rank': None,
    'team_record': '71-65',
    'team_score': '2',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.com/mlb/team/_/name/mil/milwaukee-brewers',
    'team_win_probability': 0.762,
    'team_winner': None,
    'tv_network': None,
    'venue': 'American Family Field',
  })
# ---
# name: test_event[test_tt_all_test03]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Final',
    'date': '2022-09-08T18:20Z',
    'down_distance_text': None,
    'event_name': 'CIN @ CHC',
    'event_url': 'http://www.espn.com/mlb/game/_/gameId/401356263',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'MLB',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Chicago, Illinois',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'CHC',
    'opponent_colors': list([
      '#00417d',
      '#00417d',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '16',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/mlb/500/scoreboard/chc.png',
    'opponent_long_name': 'Chicago Cubs',
    'opponent_name': 'Cubs',
    'opponent_rank': None,
    'opponent_record': '57-80',
    'opponent_score': '3',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.com/mlb/team/_/name/chc/chicago-cubs',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 9,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'baseball',
    'sport_path': None,
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'CIN',
    'team_colors': list([
      '#c41422',
      '#ffffff',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '17',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/mlb/500/scoreboard/cin.png',
    'team_long_name': 'Cincinnati Reds',
    'team_name': 'Reds',
    'team_rank': None,
    'team_record': '55-80',
    'team_score': '4',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.com/mlb/team/_/name/cin/cincinnati-reds',
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': None,
    'venue': 'Wrigley Field',
  })
# ---
# name: test_event[test_tt_all_test04]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '9/10 - 4:00 PM EDT',
    'date': '2022-09-10T20:00Z',
    'down_distance_text': None,
    'event_name': 'EKU @ BGSU',
    'event_url': 'https://www.espn.com/college-football/game/_/gameId/401416595',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NCAAF',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Bowling Green, OH',
    'odds': 'BGSU -7.5',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'EKU',
    'opponent_colors': list([
      '#660819',
      '#f0f0f0',
    ]),
    'opponent_conference_id': '176',
    'opponent_homeaway': 'away',
    'opponent_id': '2198',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/ncaa/500/2198.png',
    'opponent_long_name': 'Eastern Kentucky Colonels',
    'opponent_name': 'Colonels',
    'opponent_rank': None,
    'opponent_record': '0-1',
    'opponent_score': '0',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.com/college-football/team/_/id/2198/eastern-kentucky-colonels',
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': 57,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 0,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'football',
    'sport_path': None,
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'BGSU',
    'team_colors': list([
      '#2b1000',
      '#492000',
    ]),
    'team_conference_id': '15',
    'team_homeaway': 'home',
    'team_id': '189',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/ncaa/500/189.png',
    'team_long_name': 'Bowling Green Falcons',
    'team_name': 'Falcons',
    'team_rank': None,
    'team_record': '0-1',
    'team_score': '0',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.com/college-football/team/_/id/189/bowling-green-falcons',
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': 'ESPN3',
    'venue': 'Doyt L. Perry Stadium',
  })
# ---
# name: test_event[test_tt_all_test05]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '4:15 - 4th',
    'date': '2022-09-10T16:00Z',
    'down_distance_text': '1st & 10 at TEX 24',
    'event_name': 'ALA @ TEX',
    'event_url': 'https://www.espn.com/college-football/game?gameId=401403868',
    'kickoff_in': '{test} days',
    'last_play': 'Jahmyr Gibbs run for 2 yds to the Texas 24 for a 1ST down',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NCAAF',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Austin, TX',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'TEX',
    'opponent_colors': list([
      '#EE7524',
      '#f0f0f0',
    ]),
    'opponent_conference_id': '4',
    'opponent_homeaway': 'home',
    'opponent_id': '251',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/ncaa/500/251.png',
    'opponent_long_name': 'Texas Longhorns',
    'opponent_name': 'Longhorns',
    'opponent_rank': None,
    'opponent_record': '1-0',
    'opponent_score': '16',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': 3,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.com/college-football/team/_/id/251/texas-longhorns',
    'opponent_win_probability': 0.152,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': '333',
    'private_fast_refresh': True,
    'quarter': 4,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'football',
    'sport_path': None,
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'ALA',
    'team_colors': list([
      '#690014',
      '#f1f2f3',
    ]),
    'team_conference_id': '8',
    'team_homeaway': 'away',
    'team_id': '333',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/ncaa/500/333.png',
    'team_long_name': 'Alabama Crimson Tide',
    'team_name': 'Crimson Tide',
    'team_rank': 1,
    'team_record': '1-0',
    'team_score': '17',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': 3,
    'team_total_shots': None,
    'team_url': 'https://www.espn.com/college-football/team/_/id/333/alabama-crimson-tide',
    'team_win_probability': 0.848,
    'team_winner': None,
    'tv_network': 'FOX',
    'venue': 'DKR-Texas Memorial Stadium',
  })
# ---
# name: test_event[test_tt_all_test06]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Final',
    'date': '2022-09-09T00:20Z',
    'down_distance_text': None,
    'event_name': 'BUF @ LAR',
    'event_url': 'https://www.espn.com/nfl/game/_/gameId/401437654',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NFL',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Inglewood, CA',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'LAR',
    'opponent_colors': list([
      '#00295B',
      '#b3995d',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '14',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/nfl/500/scoreboard/lar.png',
    'opponent_long_name': 'Los Angeles Rams',
    'opponent_name': 'Rams',
    'opponent_rank': None,
    'opponent_record': '0-1',
    'opponent_score': '10',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.com/nfl/team/_/name/lar/los-angeles-rams',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 4,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'football',
    'sport_path': None,
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'BUF',
    'team_colors': list([
      '#04407F',
      '#c60c30',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '2',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/nfl/500/scoreboard/buf.png',
    'team_long_name': 'Buffalo Bills',
    'team_name': 'Bills',
    'team_rank': None,
    'team_record': '1-0',
    'team_score': '31',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.com/nfl/team/_/name/buf/buffalo-bills',
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': 'NBC',
    'venue': 'SoFi Stadium',
  })
# ---
# name: test_event[test_tt_all_test07]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '9/9 - 7:00 PM EDT',
    'date': '2022-09-09T23:00Z',
    'down_distance_text': None,
    'event_name': 'POR @ ORL',
    'event_url': 'http://www.espn.com/soccer/match/_/gameId/633108',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NWSL',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Orlando, Florida',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'POR',
    'opponent_colors': list([
      '#004812',
      '#000000',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '15362',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/soccer/500/15362.png',
    'opponent_long_name': 'Portland Thorns FC',
    'opponent_name': 'Portland',
    'opponent_rank': None,
    'opponent_record': '7-7-3',
    'opponent_score': '0',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'http://www.espn.com/soccer/club/_/id/15362/portland-thorns-fc',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 0,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'soccer',
    'sport_path': None,
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'ORL',
    'team_colors': list([
      '#633492',
      '#a7c0dd',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '18206',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/soccer/500/18206.png',
    'team_long_name': 'Orlando Pride',
    'team_name': 'Orlando',
    'team_rank': None,
    'team_record': '5-6-6',
    'team_score': '0',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'http://www.espn.com/soccer/club/_/id/18206/orlando-pride',
    'team_win_probability': None,
    'team_winner': False,
    'tv_network': None,
    'venue': 'Exploria Stadium',
  })
# ---
# name: test_event[test_tt_all_test08]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': "69'",
    'date': '2022-09-09T23:30Z',
    'down_distance_text': None,
    'event_name': 'CLB @ MTL',
    'event_url': 'http://www.espn.com/soccer/match?gameId=623574',
    'kickoff_in': '{test} days',
    'last_play': "CLB 48.2%, MTL 51.8%;      11'  Yellow Card: Rudy Camacho (MTL)               64'  Yellow Card: Joel Waterman (MTL)               66'  Goal - Header: Jonathan Mensah (CLB)",
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'MLS',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Montreal, Canada',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'MTL',
    'opponent_colors': list([
      '#181818',
      '#c9c7c8',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '9720',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/soccer/500/9720.png',
    'opponent_long_name': 'CF Montréal',
    'opponent_name': 'CF Montréal',
    'opponent_rank': None,
    'opponent_record': '16-4-9',
    'opponent_score': '0',
    'opponent_sets_won': None,
    'opponent_shots_on_target': '8',
    'opponent_timeouts': None,
    'opponent_total_shots': '15',
    'opponent_url': 'http://www.espn.com/soccer/club/_/id/9720/cf-montreal',
    'opponent_win_probability': 0.0,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 2,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'soccer',
    'sport_path': None,
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'CLB',
    'team_colors': list([
      '#ffff00',
      '#c9c7c8',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '183',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/soccer/500/183.png',
    'team_long_name': 'Columbus Crew',
    'team_name': 'Columbus',
    'team_rank': None,
    'team_record': '9-13-6',
    'team_score': '2',
    'team_sets_won': None,
    'team_shots_on_target': '5',
    'team_timeouts': None,
    'team_total_shots': '11',
    'team_url': 'http://www.espn.com/soccer/club/_/id/183/columbus-crew',
    'team_win_probability': 0.0,
    'team_winner': False,
    'tv_network': 'ESPN+',
    'venue': 'Stade Saputo',
  })
# ---
# name: test_event[test_tt_all_test09]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'FT-Pens',
    'date': '2022-12-18T15:00Z',
    'down_distance_text': None,
    'event_name': 'FRA @ ARG',
    'event_url': 'http://www.espn.com/soccer/match/_/gameId/633850',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'WC',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Lusail, Qatar',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'FRA',
    'opponent_colors': list([
      '#112855',
      '#112855',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '478',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/fra.png',
    'opponent_long_name': 'France',
    'opponent_name': 'France',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': '3(2)',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'http://www.espn.com/soccer/team/_/id/478/france',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 5,
    'season': 'final',
    'series_summary': None,
    'sport': 'soccer',
    'sport_path': None,
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'ARG',
    'team_colors': list([
      '#43A1D5',
      '#43A1D5',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '202',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/arg.png',
    'team_long_name': 'Argentina',
    'team_name': 'Argentina',
    'team_rank': None,
    'team_record': None,
    'team_score': '3(4)',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'http://www.espn.com/soccer/team/_/id/202/argentina',
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': 'FOX',
    'venue': 'Lusail Iconic Stadium',
  })
# ---
# name: test_event[test_tt_all_test10]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '12/20 - 7:00 PM EST',
    'date': '2022-12-21T00:00Z',
    'down_distance_text': None,
    'event_name': 'UTAH @ DET',
    'event_url': 'https://www.espn.com/nba/game/_/gameId/401468616',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NBA',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Detroit, MI',
    'odds': 'UTAH -2.5',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'UTAH',
    'opponent_colors': list([
      '#000000',
      '#fff21f',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '26',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/nba/500/scoreboard/utah.png',
    'opponent_long_name': 'Utah Jazz',
    'opponent_name': 'Jazz',
    'opponent_rank': None,
    'opponent_record': '17-16',
    'opponent_score': '0',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.com/nba/team/_/name/utah/utah-jazz',
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': 229,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 0,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'basketball',
    'sport_path': None,
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'DET',
    'team_colors': list([
      '#FA002C',
      '#006bb6',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '8',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/nba/500/scoreboard/det.png',
    'team_long_name': 'Detroit Pistons',
    'team_name': 'Pistons',
    'team_rank': None,
    'team_record': '8-24',
    'team_score': '0',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.com/nba/team/_/name/det/detroit-pistons',
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': 'Little Caesars Arena',
  })
# ---
# name: test_event[test_tt_all_test11]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '1:38 - 2nd',
    'date': '2022-10-02T22:00Z',
    'down_distance_text': None,
    'event_name': 'UTAH @ TOR',
    'event_url': 'https://www.espn.com/nba/game?gameId=401474846',
    'kickoff_in': '{test} days',
    'last_play': 'Gary Trent Jr. defensive rebound',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NBA',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Edmonton, AB',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'TOR',
    'opponent_colors': list([
      '#CE0F41',
      '#061922',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '28',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/nba/500/scoreboard/tor.png',
    'opponent_long_name': 'Toronto Raptors',
    'opponent_name': 'Raptors',
    'opponent_rank': None,
    'opponent_record': '0-0',
    'opponent_score': '47',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.com/nba/team/_/name/tor/toronto-raptors',
    'opponent_win_probability': 0.0,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 2,
    'season': 'preseason',
    'series_summary': None,
    'sport': 'basketball',
    'sport_path': None,
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'UTAH',
    'team_colors': list([
      '#06143F',
      '#f9a01b',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '26',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/nba/500/scoreboard/utah.png',
    'team_long_name': 'Utah Jazz',
    'team_name': 'Jazz',
    'team_rank': None,
    'team_record': '0-0',
    'team_score': '41',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.com/nba/team/_/name/utah/utah-jazz',
    'team_win_probability': 0.0,
    'team_winner': None,
    'tv_network': 'NBA TV',
    'venue': 'Rogers Place',
  })
# ---
# name: test_event[test_tt_all_test12]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Final',
    'date': '2022-10-02T17:00Z',
    'down_distance_text': None,
    'event_name': 'CHA @ BOS',
    'event_url': 'http://www.espn.com/nba/game/_/gameId/401474845',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NBA',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Boston, MA',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'BOS',
    'opponent_colors': list([
      '#006532',
      '#f1f2f3',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '2',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/nba/500/scoreboard/bos.png',
    'opponent_long_name': 'Boston Celtics',
    'opponent_name': 'Celtics',
    'opponent_rank': None,
    'opponent_record': '1-0',
    'opponent_score': '134',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.com/nba/team/_/name/bos/boston-celtics',
    'opponent_win_probability': None,
    'opponent_winner': True,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 4,
    'season': 'preseason',
    'series_summary': None,
    'sport': 'basketball',
    'sport_path': None,
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'CHA',
    'team_colors': list([
      '#1D1060',
      '#008ca8',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '30',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/nba/500/scoreboard/cha.png',
    'team_long_name': 'Charlotte Hornets',
    'team_name': 'Hornets',
    'team_rank': None,
    'team_record': '0-1',
    'team_score': '93',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.com/nba/team/_/name/cha/charlotte-hornets',
    'team_win_probability': None,
    'team_winner': False,
    'tv_network': 'NBA TV',
    'venue': 'TD Garden',
  })
# ---
# name: test_event[test_tt_all_test13]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '12/20 - 8:00 PM EST',
    'date': '2022-12-21T01:00Z',
    'down_distance_text': None,
    'event_name': 'OTT @ WPG',
    'event_url': 'https://www.espn.com/nhl/game/_/gameId/401459106',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NHL',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Winnipeg, MB, Canada',
    'odds': 'WPG -130',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'OTT',
    'opponent_colors': list([
      '#d01b35',
      '#c89a1c',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '14',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/ott.png',
    'opponent_long_name': 'Ottawa Senators',
    'opponent_name': 'Senators',
    'opponent_rank': None,
    'opponent_record': '14-15-2',
    'opponent_score': '0',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'http://www.espn.com/nhl/team/_/name/ott/ottawa-senators',
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': 6.5,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 0,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'hockey',
    'sport_path': None,
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'WPG',
    'team_colors': list([
      '#133866',
      '#b81f3d',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '28',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/wpg.png',
    'team_long_name': 'Winnipeg Jets',
    'team_name': 'Jets',
    'team_rank': None,
    'team_record': '20-10-1',
    'team_score': '0',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'http://www.espn.com/nhl/team/_/name/wpg/winnipeg-jets',
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': 'NHLPP|ESPN+',
    'venue': 'Canada Life Centre',
  })
# ---
# name: test_event[test_tt_all_test14]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '11:58 - 2th',
    'date': '2022-10-02T23:00Z',
    'down_distance_text': None,
    'event_name': 'PHI @ NYI',
    'event_url': 'http://www.espn.com/nhl/game/_/gameId/401461502',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NHL',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Elmont, NY, USA',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'PHI',
    'opponent_colors': list([
      '#eb7131',
      '#000000',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '15',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/phi.png',
    'opponent_long_name': 'Philadelphia Flyers',
    'opponent_name': 'Flyers',
    'opponent_rank': None,
    'opponent_record': '1-2-0',
    'opponent_score': '1',
    'opponent_sets_won': None,
    'opponent_shots_on_target': '13',
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'http://www.espn.com/nhl/team/_/name/phi/philadelphia-flyers',
    'opponent_win_probability': 0.0,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 2,
    'season': 'preseason',
    'series_summary': None,
    'sport': 'hockey',
    'sport_path': None,
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'NYI',
    'team_colors': list([
      '#10539c',
      '#e17033',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '12',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/nyi.png',
    'team_long_name': 'New York Islanders',
    'team_name': 'Islanders',
    'team_rank': None,
    'team_record': '0-2-0',
    'team_score': '0',
    'team_sets_won': None,
    'team_shots_on_target': '7',
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'http://www.espn.com/nhl/team/_/name/nyi/new-york-islanders',
    'team_win_probability': 0.0,
    'team_winner': None,
    'tv_network': None,
    'venue': 'UBS Arena',
  })
# ---
# name: test_event[test_tt_all_test15]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Final',
    'date': '2022-10-01T23:00Z',
    'down_distance_text': None,
    'event_name': 'WSH @ CBJ',
    'event_url': 'https://www.espn.com/nhl/game/_/gameId/401461499',
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NHL',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Columbus, OH, USA',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'WSH',
    'opponent_colors': list([
      '#d01b35',
      '#002d62',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '23',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/wsh.png',
    'opponent_long_name': 'Washington Capitals',
    'opponent_name': 'Capitals',
    'opponent_rank': None,
    'opponent_record': '2-1-1',
    'opponent_score': '1',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'http://www.espn.com/nhl/team/_/name/wsh/washington-capitals',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 3,
    'season': 'preseason',
    'series_summary': 'CBJ leads series 3-2',
    'sport': 'hockey',
    'sport_path': None,
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'CBJ',
    'team_colors': list([
      '#002d62',
      '#cd202c',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '29',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/nhl/500/scoreboard/cbj.png',
    'team_long_name': 'Columbus Blue Jackets',
    'team_name': 'Blue Jackets',
    'team_rank': None,
    'team_record': '3-1-1',
    'team_score': '2',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'http://www.espn.com/nhl/team/_/name/cbj/columbus-blue-jackets',
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': None,
    'venue': 'Nationwide Arena',
  })
# ---
# name: test_event[test_tt_all_test16]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '9/8 - 8:00 PM EDT',
    'date': '2022-09-09T00:00Z',
    'down_distance_text': None,
    'event_name': 'CP @ PEPP',
    'event_url': None,
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NCAAVBW',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Seattle, Washington',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'CP',
    'opponent_colors': list([
      '#083808',
      '#083808',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '13',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/ncaa/500/13.png',
    'opponent_long_name': 'Cal Poly',
    'opponent_name': 'Mustangs',
    'opponent_rank': None,
    'opponent_record': '0-1',
    'opponent_score': '0',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 0,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'volleyball',
    'sport_path': None,
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'PEPP',
    'team_colors': list([
      '#009c98',
      '#009c98',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '2492',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/ncaa/500/2492.png',
    'team_long_name': 'Pepperdine',
    'team_name': 'Waves',
    'team_rank': 24,
    'team_record': '1-1',
    'team_score': '0',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': 'Alaska Airlines Arena',
  })
# ---
# name: test_event[test_tt_all_test17]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '1st Set',
    'date': '2022-09-08T23:00Z',
    'down_distance_text': None,
    'event_name': 'KENN @ MSST',
    'event_url': None,
    'kickoff_in': '{test} days',
    'last_play': ' Set 1: MSST 20 KENN 13; ',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NCAAVBW',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Starkville, Mississippi',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'KENN',
    'opponent_colors': list([
      '#A9A9A9',
      '#A9A9A9',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '338',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/ncaa/500/338.png',
    'opponent_long_name': 'Kennesaw State',
    'opponent_name': 'Owls',
    'opponent_rank': None,
    'opponent_record': '0-1',
    'opponent_score': 13,
    'opponent_sets_won': '0',
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': 0.0,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 1,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'volleyball',
    'sport_path': None,
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'MSST',
    'team_colors': list([
      '#531122',
      '#531122',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '344',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/ncaa/500/344.png',
    'team_long_name': 'Mississippi State',
    'team_name': 'Bulldogs',
    'team_rank': None,
    'team_record': '5-0',
    'team_score': 20,
    'team_sets_won': '0',
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': 0.0,
    'team_winner': None,
    'tv_network': 'SECN+',
    'venue': 'Newell-Grissom Building',
  })
# ---
# name: test_event[test_tt_all_test18]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Final',
    'date': '2022-09-08T21:00Z',
    'down_distance_text': None,
    'event_name': 'ARMY @ SYR',
    'event_url': None,
    'kickoff_in': '{test} days',
    'last_play': None,
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'NCAAVBW',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Syracuse, New York',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'SYR',
    'opponent_colors': list([
      '#1A3E86',
      '#1A3E86',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '183',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/ncaa/500/183.png',
    'opponent_long_name': 'Syracuse',
    'opponent_name': 'Orange',
    'opponent_rank': None,
    'opponent_record': '3-3',
    'opponent_score': '1',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 4,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'volleyball',
    'sport_path': None,
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'ARMY',
    'team_colors': list([
      '#ce9c00',
      '#ce9c00',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '349',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/ncaa/500/349.png',
    'team_long_name': 'Army',
    'team_name': 'Black Knights',
    'team_rank': None,
    'team_record': '0-1',
    'team_score': '3',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': 'ACCNX',
    'venue': "Women's Building",
  })
# ---
# name: test_event[test_tt_all_test19]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Final',
    'date': '2024-07-28T13:00Z',
    'down_distance_text': 'Round 1',
    'event_name': 'Olympics',
    'event_url': 'https://www.espn.com/tennis/scoreboard/tournament/_/eventId/771-2024/competitionType/2',
    'kickoff_in': '{test} days',
    'last_play': ' Set 1: J. Struff 6 F. Cabral 2;  Set 2: J. Struff 6 F. Cabral 2; ',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'ATP',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Court 7',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '3825',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/por.png',
    'opponent_long_name': 'Francisco Cabral',
    'opponent_name': 'Francisco Cabral',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': 0,
    'opponent_sets_won': 0,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': "Men's Singles",
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 2,
    'season': None,
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': None,
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'STRUFF',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '2337',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/ger.png',
    'team_long_name': 'Jan-Lennard Struff',
    'team_name': 'Jan-Lennard Struff',
    'team_rank': None,
    'team_record': None,
    'team_score': 2,
    'team_sets_won': 1,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': 'Peacock',
    'venue': 'Paris, France',
  })
# ---
# name: test_event[test_tt_all_test20]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '2nd Set',
    'date': '2024-07-28T18:50Z',
    'down_distance_text': 'Round 1',
    'event_name': 'Olympics',
    'event_url': 'https://www.espn.com/tennis/scoreboard/tournament/_/eventId/771-2024/competitionType/2',
    'kickoff_in': '{test} days',
    'last_play': ' Set 1: M. Fucsovics / F. Marozsan 2 T. Griekspoor / W. Koolhof 6;  Set 2: M. Fucsovics / F. Marozsan 0 T. Griekspoor / W. Koolhof 0; ',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'WTA',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Court 11',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': list([
      '#A9A9A9',
      '#A9A9A9',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '3319-3191',
    'opponent_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'opponent_long_name': 'Tallon Griekspoor / Wesley Koolhof',
    'opponent_name': 'T. Griekspoor / W. Koolhof',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': 0,
    'opponent_sets_won': 1,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': 0.0,
    'opponent_winner': None,
    'outs': None,
    'overunder': "Men's Doubles",
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 2,
    'season': None,
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': None,
    'state': 'IN',
    'strikes': None,
    'team_abbr': None,
    'team_colors': list([
      '#D3D3D3',
      '#D3D3D3',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '1862-9213',
    'team_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'team_long_name': 'Marton Fucsovics / Fabian Marozsan',
    'team_name': 'M. Fucsovics / F. Marozsan',
    'team_rank': None,
    'team_record': None,
    'team_score': 0,
    'team_sets_won': 0,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': 0.0,
    'team_winner': None,
    'tv_network': 'Peacock',
    'venue': 'Paris, France',
  })
# ---
# name: test_event[test_tt_all_test21]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Mon, July 29th at 6:00 AM EDT',
    'date': '2024-07-29T10:00Z',
    'down_distance_text': 'Round 2',
    'event_name': 'Olympics',
    'event_url': 'https://www.espn.com/tennis/scoreboard/tournament/_/eventId/771-2024/competitionType/2',
    'kickoff_in': '{test} days',
    'last_play': '',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'WTA',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Court Suzanne-Lenglen',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '1649',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/pol.png',
    'opponent_long_name': 'Magda Linette',
    'opponent_name': 'Magda Linette',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': None,
    'opponent_sets_won': 0,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': "Women's Singles",
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 1,
    'season': None,
    'series_summary': None,
    'sport': 'tennis',
    'sport_path': None,
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'PAOLINI',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '2615',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/ita.png',
    'team_long_name': 'Jasmine Paolini',
    'team_name': 'Jasmine Paolini',
    'team_rank': None,
    'team_record': None,
    'team_score': None,
    'team_sets_won': 0,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': 'Peacock',
    'venue': 'Paris, France',
  })
# ---
# name: test_event[test_tt_all_test22]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '12/17 - 7:00 PM EST',
    'date': '2022-12-18T00:00Z',
    'down_distance_text': None,
    'event_name': 'UFC Fight Night: Cannonier vs. Strickland',
    'event_url': 'https://www.espn.com/mma/fightcenter/_/id/600023847',
    'kickoff_in': '{test} days',
    'last_play': '1. *S. MOROZOV v. J. Newson (Dec: 3-0); 2. *M. KAPE v. D. Dvorak (Dec: 3-0); 3. *R. FAKHRETDINOV v. B. Battle (Dec: 3-0); 4. *R. GARCIA v. Maheshate (Dec: 3-0); 5. J. Matthews v. M. SEMELSBERGER* (Dec: 0-3); 6. *C. MCKENNA v. C. Vlismas (Dec: 3-0); 7. *M. OLEKSIEJCZUK v. C. Brundage (KO/TKO/Sub: R1@3:16); ',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'UFC',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Las Vegas, NV, USA',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '3154860',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/usa.png',
    'opponent_long_name': 'Jared Cannonier',
    'opponent_name': 'Jared Cannonier',
    'opponent_rank': None,
    'opponent_record': '15-6-0',
    'opponent_score': None,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 0,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'mma',
    'sport_path': None,
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'STRICKLAND',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '3093653',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/usa.png',
    'team_long_name': 'Sean Strickland',
    'team_name': 'Sean Strickland',
    'team_rank': None,
    'team_record': '25-4-0',
    'team_score': None,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': False,
    'tv_network': 'ESPN+',
    'venue': 'UFC APEX',
  })
# ---
# name: test_event[test_tt_all_test23]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'R1, 2:27',
    'date': '2022-12-18T00:00Z',
    'down_distance_text': None,
    'event_name': 'UFC Fight Night: Cannonier vs. Strickland',
    'event_url': 'https://www.espn.com/mma/fightcenter/_/id/600023847',
    'kickoff_in': '{test} days',
    'last_play': '1. *S. MOROZOV v. J. Newson (Dec: 3-0); 2. *M. KAPE v. D. Dvorak (Dec: 3-0); 3. *R. FAKHRETDINOV v. B. Battle (Dec: 3-0); 4. *R. GARCIA v. Maheshate (Dec: 3-0); 5. J. Matthews v. M. SEMELSBERGER* (Dec: 0-3); 6. *C. MCKENNA v. C. Vlismas (Dec: 3-0); 7. *M. OLEKSIEJCZUK v. C. Brundage (KO/TKO/Sub: R1@3:16); ',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'UFC',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Las Vegas, NV, USA',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '3955577',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/usa.png',
    'opponent_long_name': 'Julian Erosa',
    'opponent_name': 'Julian Erosa',
    'opponent_rank': None,
    'opponent_record': '28-10-0',
    'opponent_score': None,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': 0.0,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 1,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'mma',
    'sport_path': None,
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'CACERES',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '2552906',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/usa.png',
    'team_long_name': 'Alex Caceres',
    'team_name': 'Alex Caceres',
    'team_rank': None,
    'team_record': '19-13-0',
    'team_score': None,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': 0.0,
    'team_winner': False,
    'tv_network': 'ESPN+',
    'venue': 'UFC APEX',
  })
# ---
# name: test_event[test_tt_all_test24]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Final',
    'date': '2022-12-17T21:00Z',
    'down_distance_text': None,
    'event_name': 'UFC Fight Night: Cannonier vs. Strickland',
    'event_url': 'https://www.espn.com/mma/fightcenter/_/id/600023847',
    'kickoff_in': '{test} days',
    'last_play': '1. *S. MOROZOV v. J. Newson (Dec: 3-0); 2. *M. KAPE v. D. Dvorak (Dec: 3-0); 3. *R. FAKHRETDINOV v. B. Battle (Dec: 3-0); 4. *R. GARCIA v. Maheshate (Dec: 3-0); 5. J. Matthews v. M. SEMELSBERGER* (Dec: 0-3); 6. *C. MCKENNA v. C. Vlismas (Dec: 3-0); 7. *M. OLEKSIEJCZUK v. C. Brundage (KO/TKO/Sub: R1@3:16); ',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'UFC',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Las Vegas, NV, USA',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '4815998',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/usa.png',
    'opponent_long_name': 'Bryan Battle',
    'opponent_name': 'Bryan Battle',
    'opponent_rank': None,
    'opponent_record': '9-2-0',
    'opponent_score': 0,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 3,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'mma',
    'sport_path': None,
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'FAKHRETDINOV',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '4712980',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/rus.png',
    'team_long_name': 'Rinat Fakhretdinov',
    'team_name': 'Rinat Fakhretdinov',
    'team_rank': None,
    'team_record': '20-1-0',
    'team_score': 3,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': 'ESPN+',
    'venue': 'UFC APEX',
  })
# ---
# name: test_event[test_tt_all_test25]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Round 4 - In Progress',
    'date': '2022-10-13T04:00Z',
    'down_distance_text': None,
    'event_name': 'ZOZO CHAMPIONSHIP',
    'event_url': 'https://www.espn.com/golf/leaderboard?tournamentId=401465500',
    'kickoff_in': '{test} days',
    'last_play': '1. R. Fowler (-14),   2. K. Bradley (-13),   3. A. Putnam (-12),   4. V. Hovland (-11),   T5. M. McNealy (-10),   T5. H. Buckley (-10),   T5. C. Chump (-10),   T8. T. Moore (-9),   T8. S. Theegala (-9),   T8. R. Hisatsune (-9),  ',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'PGA',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '3702',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/usa.png',
    'opponent_long_name': 'Rickie Fowler',
    'opponent_name': 'Rickie Fowler',
    'opponent_rank': '1',
    'opponent_record': None,
    'opponent_score': '-14',
    'opponent_sets_won': None,
    'opponent_shots_on_target': 0,
    'opponent_timeouts': None,
    'opponent_total_shots': 0,
    'opponent_url': None,
    'opponent_win_probability': 0.0,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 4,
    'season': None,
    'series_summary': None,
    'sport': 'golf',
    'sport_path': None,
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'CONNERS',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '9126',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/can.png',
    'team_long_name': 'Corey Conners',
    'team_name': 'Corey Conners',
    'team_rank': 'T31',
    'team_record': None,
    'team_score': '-4',
    'team_sets_won': None,
    'team_shots_on_target': 2,
    'team_timeouts': None,
    'team_total_shots': 7,
    'team_url': None,
    'team_win_probability': 0.0,
    'team_winner': None,
    'tv_network': None,
    'venue': None,
  })
# ---
# name: test_event[test_tt_all_test26]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Scheduled',
    'date': '2023-01-01T08:15Z',
    'down_distance_text': None,
    'event_name': 'BH v SS',
    'event_url': 'https://www.espn.in/cricket/series/8044/game/1324648/brisbane-heat-vs-sydney-sixers-25th-match-big-bash-league-2022-23',
    'kickoff_in': '{test} days',
    'last_play': 'Starts at 18:15 local time',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'XXX',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Brisbane, Australia',
    'odds': 'Twenty20',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'SS',
    'opponent_colors': list([
      '#',
      '#',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '509673',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/cricket/500/509673.png',
    'opponent_long_name': 'Sydney Sixers',
    'opponent_name': 'SS',
    'opponent_rank': None,
    'opponent_record': '',
    'opponent_score': '',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.in/cricket/team/_/id/509673/sydney-sixers',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': None,
    'series_summary': None,
    'sport': 'cricket',
    'sport_path': None,
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'BH',
    'team_colors': list([
      '#',
      '#',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '509668',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/cricket/500/509668.png',
    'team_long_name': 'Brisbane Heat',
    'team_name': 'BH',
    'team_rank': None,
    'team_record': '',
    'team_score': '',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.in/cricket/team/_/id/509668/brisbane-heat',
    'team_win_probability': None,
    'team_winner': False,
    'tv_network': None,
    'venue': 'Brisbane Cricket Ground, Woolloongabba, Brisbane',
  })
# ---
# name: test_event[test_tt_all_test27]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Live',
    'date': '2023-01-01T02:40Z',
    'down_distance_text': None,
    'event_name': 'MR v PS',
    'event_url': 'https://www.espn.in/cricket/series/8044/game/1324647/melbourne-renegades-vs-perth-scorchers-24th-match-big-bash-league-2022-23',
    'kickoff_in': '{test} days',
    'last_play': 'Scorchers require 31 runs',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'XXX',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Melbourne, Australia',
    'odds': 'Twenty20',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'PS',
    'opponent_colors': list([
      '#',
      '#',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '509670',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/cricket/500/509670.png',
    'opponent_long_name': 'Perth Scorchers',
    'opponent_name': 'PS',
    'opponent_rank': None,
    'opponent_record': '',
    'opponent_score': '125/3 (16/20 ov, target 156)',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.in/cricket/team/_/id/509670/perth-scorchers',
    'opponent_win_probability': 0.0,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': '509670',
    'private_fast_refresh': True,
    'quarter': '',
    'season': None,
    'series_summary': None,
    'sport': 'cricket',
    'sport_path': None,
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'MR',
    'team_colors': list([
      '#',
      '#',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '509671',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/cricket/500/509671.png',
    'team_long_name': 'Melbourne Renegades',
    'team_name': 'MR',
    'team_rank': None,
    'team_record': '',
    'team_score': '155/6',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.in/cricket/team/_/id/509671/melbourne-renegades',
    'team_win_probability': 0.0,
    'team_winner': False,
    'tv_network': None,
    'venue': 'Docklands Stadium, Melbourne',
  })
# ---
# name: test_event[test_tt_all_test28]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Result',
    'date': '2022-12-22T03:30Z',
    'down_distance_text': None,
    'event_name': 'BAN v IND',
    'event_url': 'https://www.espn.in/cricket/series/21108/scorecard/1340849/bangladesh-vs-india-2nd-test-india-in-bangladesh-2022-23',
    'kickoff_in': '{test} days',
    'last_play': 'India won by 3 wkts',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'XXX',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Dhaka, Bangladesh',
    'odds': 'Test',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'BAN',
    'opponent_colors': list([
      '##006a4e',
      '##006a4e',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '25',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/cricket/500/25.png',
    'opponent_long_name': 'Bangladesh',
    'opponent_name': 'BAN',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': '227 & 231',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.espn.in/cricket/team/_/id/25/bangladesh',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': '6',
    'private_fast_refresh': False,
    'quarter': None,
    'season': None,
    'series_summary': None,
    'sport': 'cricket',
    'sport_path': None,
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'IND',
    'team_colors': list([
      '##137dd2',
      '##137dd2',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '6',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/cricket/500/6.png',
    'team_long_name': 'India',
    'team_name': 'IND',
    'team_rank': None,
    'team_record': None,
    'team_score': '314 & 145/7 (47 ov, target 145)',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.espn.in/cricket/team/_/id/6/india',
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': None,
    'venue': 'Shere Bangla National Stadium, Mirpur, Dhaka',
  })
# ---
# name: test_event[test_tt_all_test29]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': '4/30 - 7:00 AM EDT',
    'date': '2023-04-30T11:00Z',
    'down_distance_text': None,
    'event_name': 'Azerbaijan GP',
    'event_url': 'https://www.espn.com/f1/race/_/id/600026751',
    'kickoff_in': '{test} days',
    'last_play': '0. C. Leclerc,   1. M. Verstappen,   2. S. Pérez,   3. C. Saintz,   4. L. Hamilton,   5. F. Alonso,   6. L. Norris,   7. Y. Tsunoda,   8. L. Stroll,   9. O. Piastri,  ',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'F1',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Baku, Azerbaijan',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '5498',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/mon.png',
    'opponent_long_name': 'Cherles Leclerc',
    'opponent_name': 'Cherles Leclerc',
    'opponent_rank': 1,
    'opponent_record': None,
    'opponent_score': 1,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 'Race',
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'racing',
    'sport_path': None,
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'SAINTZ',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '4686',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/esp.png',
    'team_long_name': 'Carlos Saintz',
    'team_name': 'Carlos Saintz',
    'team_rank': 4,
    'team_record': None,
    'team_score': 4,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': 0,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': False,
    'tv_network': 'ESPN',
    'venue': 'Baku City Circuit',
  })
# ---
# name: test_event[test_tt_all_test30]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'In Progress',
    'date': '2023-04-29T13:30Z',
    'down_distance_text': None,
    'event_name': 'Azerbaijan GP',
    'event_url': 'https://www.espn.com/f1/race/_/id/600026751',
    'kickoff_in': '{test} days',
    'last_play': '1. C. Leclerc,   2. S. Pérez,   3. G. Russell,   4. M. Verstappen,   5. C. Sainz,   6. L. Hamilton,   7. F. Alonso,   8. A. Albon,   9. L. Norris,   10. L. Stroll,  ',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'F1',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Baku, Azerbaijan',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '5498',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/mon.png',
    'opponent_long_name': 'Cherles Leclerc',
    'opponent_name': 'Cherles Leclerc',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': 1,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': 0.0,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 'SQ',
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'racing',
    'sport_path': None,
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'VERSTAPPEN',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '4665',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/ned.png',
    'team_long_name': 'Max Verstappen',
    'team_name': 'Max Verstappen',
    'team_rank': None,
    'team_record': None,
    'team_score': 4,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': 3,
    'team_url': None,
    'team_win_probability': 0.0,
    'team_winner': False,
    'tv_network': 'ESPN',
    'venue': 'Baku City Circuit',
  })
# ---
# name: test_event[test_tt_all_test31]
  dict({
    'api_message': None,
    'api_url': None,
    'balls': None,
    'clock': 'Final',
    'date': '2023-04-28T09:30Z',
    'down_distance_text': None,
    'event_name': 'Azerbaijan GP',
    'event_url': 'https://www.espn.com/f1/race/_/id/600026751',
    'kickoff_in': '{test} days',
    'last_play': '1. M. Verstappen,   2. C. Leclerc,   3. S. Pérez,   4. C. Sainz,   5. L. Norris,   6. N. de Vries,   7. L. Strollz,   8. F. Alonso,   9. A. Albon,   10. Z. Guanyu,  ',
    'last_update': '2022-02-02 02:02:02-05:00',
    'league': 'F1',
    'league_logo': 'https://a.espncdn.com/i/teamlogos/leagues/500/mlb.png',
    'league_name': 'Major League Baseball',
    'league_path': None,
    'location': 'Baku, Azerbaijan',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': '4665',
    'opponent_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/ned.png',
    'opponent_long_name': 'Max Verstappen',
    'opponent_name': 'Max Verstappen',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': 1,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': 'FP1',
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'racing',
    'sport_path': None,
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'STROLLZ',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': '4775',
    'team_logo': 'https://a.espncdn.com/i/teamlogos/countries/500/can.png',
    'team_long_name': 'Lance Strollz',
    'team_name': 'Lance Strollz',
    'team_rank': None,
    'team_record': None,
    'team_score': 7,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': 22,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': False,
    'tv_network': 'ESPN2',
    'venue': 'Baku City Circuit',
  })
# ---
